5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4128/executions/1575_1331.log
== TEST (2019-03-12 11:56:21) 
-- CODE:
print(50/3/ %1 )
-- ERROR:
File "XXXX", line 1
    print(50/3/ %1 )
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:27) 
-- CODE:
print(50/3/ % 1 )
-- ERROR:
File "XXXX", line 1
    print(50/3/ % 1 )
                ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:33) 
-- CODE:
print(50/ 3 / % 1 )
-- ERROR:
File "XXXX", line 1
    print(50/ 3 / % 1 )
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:39) 
-- CODE:
print(50/ 3/ % 1 )
-- ERROR:
File "XXXX", line 1
    print(50/ 3/ % 1 )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:56:40) 
-- CODE:
print(50/ 3/ % 1 )
-- ERROR:
File "XXXX", line 1
    print(50/ 3/ % 1 )
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:03) 
-- CODE:
print(50 / 3/ % 1 )
-- ERROR:
File "XXXX", line 1
    print(50 / 3/ % 1 )
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:57:33) 
-- CODE:
print(50 / 3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:07) 
-- CODE:
print(50 / 4)
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:58:08) 
-- CODE:
print(50 / 4)
-- EXECUTION TIME:
0.201493
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
12.5
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:58:10) 
-- CODE:
print(50 / 4)
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:02) 
-- CODE:
print(50 / 3  )
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 11:59:21) 
-- CODE:
print(50 % 3)
-- EXECUTION TIME:
0.172693
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
2
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 11:59:22) 
-- CODE:
print(50 % 3)
-- OUTPUT:
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:10) 
-- CODE:
print(50/ 3)
print(16* 3)
-- OUTPUT:
16.666666666666668
48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:41) 
-- CODE:
print(50/ 3)
print(48 % 3) 
-- OUTPUT:
16.666666666666668
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:00:44) 
-- CODE:
print(50/ 3)
print(48 % 3) 
-- EXECUTION TIME:
0.24535
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 12:00:52) 
-- CODE:
print(50/ 3)
print(48 % 4) 
-- EXECUTION TIME:
0.210693
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 12:00:53) 
-- CODE:
print(50/ 3)
print(48 % 4) 
-- OUTPUT:
16.666666666666668
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:20:04) 
-- CODE:
print(50/ 3)
print(48 
-- ERROR:
File "XXXX", line 3
    
             ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:20:11) 
-- CODE:
print(50/ 3)
print(48) 
-- OUTPUT:
16.666666666666668
48
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:21:20) 
-- CODE:
print(50/ 3 ,1)
print(16 % 4) 
-- OUTPUT:
16.666666666666668 1
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:21:28) 
-- CODE:
print(50/ 3 ,1)
print(16 % 4) 
-- EXECUTION TIME:
0.28927
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668 1
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:33:56) 
-- CODE:
print(50/ 3)
print(
-- ERROR:
File "XXXX", line 3
    
          ^
SyntaxError: unexpected EOF while parsing
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:34:04) 
-- CODE:
print(50/ 3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:35:43) 
-- CODE:
print(50/ 3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:35:50) 
-- CODE:
print(50/ 4)
-- OUTPUT:
12.5
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:36:03) 
-- CODE:
print(50/ 3)
-- OUTPUT:
16.666666666666668
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:36:34) 
-- CODE:
print(50/ 3)
print(16 % 4)
-- OUTPUT:
16.666666666666668
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:36:36) 
-- CODE:
print(50/ 3)
print(16 % 4)
-- EXECUTION TIME:
0.19022
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16.666666666666668
0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:37:19) 
-- CODE:
print(50/ 3)
print(16 % 4)
-- OUTPUT:
16.666666666666668
0
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:37:51) 
-- CODE:
print(50 / 3 / % 4)

-- ERROR:
File "XXXX", line 1
    print(50 / 3 / % 4)
                   ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:37:58) 
-- CODE:
print(50 / 3 /% 4)

-- ERROR:
File "XXXX", line 1
    print(50 / 3 /% 4)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:38:02) 
-- CODE:
print(50 / 3 /% 4)

-- ERROR:
File "XXXX", line 1
    print(50 / 3 /% 4)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:38:07) 
-- CODE:
print(50/ 3 /% 4)

-- ERROR:
File "XXXX", line 1
    print(50/ 3 /% 4)
                 ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-12 13:38:14) 
-- CODE:
print(50/ 3 / 4)

-- OUTPUT:
4.166666666666667
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-12 13:38:17) 
-- CODE:
print(50/ 3 / 4)

-- EXECUTION TIME:
0.13373
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
4.166666666666667
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-13 12:24:49) 
-- CODE:
print(50// 3)
print(50 % 3)
-- EXECUTION TIME:
0.163655
-- TEST CASE 1:
---- input:
xx
---- correct output:
16
2
---- user output:
16
2
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
